Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-4644

Crash: when opening the File Dialog in Media Player (armv5)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 4.6.1
    • 4.6.0
    • None
    • None
    • c361d1bb2855b43f5b50adbad321e53848e16b28

    Description

      Report from Helix team:

      --------------------------------------------------------------
      We are having problem with Qt Open File Dialog Box [Only on device/ARMV5]
      When Media Player opens the File Dialog box, it crashes the application.

      We are blocked with this issue as we cant continue the Device testing.
      Could you please help us with looking in to this issue.
      --------------------------------------------------------------

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            samimeri Sami Merila (Inactive)
            fenglich Frans Englich (closed Nokia identity)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes