Crash: when opening the File Dialog in Media Player (armv5)

This is due to NGA API changes in Tb9.2. Because of API changes,
S60Style needs to have a lot of internal changes. First, the changed
style no longer itself tries to uncompress and handle CFbsBitmaps,
but instead uses the QPixmap backend for it. Second, all references
to CFbsBitmap::DataAddress() have been removed. Third, the lookup
table for theme parts has been cleaned up.

Task-number: QTBUG-4644
Reviewed-by: Janne Koskinen